syntax = "proto3";
package nicholasdotsol.duality.dex;

option go_package = "github.com/NicholasDotSol/duality/x/dex/types";
import "gogoproto/gogo.proto";

message LimitOrderPoolUserSharesWithdrawnObject {
  string pairId = 1;
  string token = 2;
  int64 tickIndex = 3;
  uint64 count = 4; 
  string address = 5; 
  string sharesWithdrawn = 6  [
      (gogoproto.moretags)   = "yaml:\"sharesWithdrawn\"",
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
      (gogoproto.nullable)   = false,
      (gogoproto.jsontag) = "sharesWithdrawn"
  ]; 
  
}

